# BakaFramework

./: .clang-format  .gitmodules  BakaPluginTemplate.toml  CMakeLists.txt  CMakePresets.json  LICENSE  MakeGen.py  README.md  bootstrap.ps1  settings.toml  vcpkg.json  xmake.lua
.github/workflows/: bootstrap.yml  build.yml  maintenance.yml
Plugin/: .clang-format  CMakeLists.txt  CMakePresets.json  vcpkg.json
Plugin/cmake/ports/steamworks-sdk/: portfile.cmake
Plugin/cmake/ports/steamworks-sdk/cmake/: config.cmake.in  version.cmake.in
Plugin/cmake/triplets/: x64-windows-baka-steam.cmake
Plugin/src/: PCH.cpp  PCH.h  main.cpp
Plugin/src/Config/: Config.h
Plugin/src/Events/: Events.h
Plugin/src/Events/Handlers/: CurrentRadiationSource.h  ItemCrafted.h  PipboyLightEvent.h
Plugin/src/Forms/: Forms.h
Plugin/src/Misc/: Fixes.h  Patches.h
Plugin/src/Misc/Patches/: LoadEditorIDs.h
Plugin/src/Scripts/: ObScript.h  Papyrus.h
Plugin/src/Scripts/ObScript/: BetaComment.h  FreePlayer.h  GetBaseObject.h  GetDefaultObject.h  Help.h  QuitGame.h  SpellHasCastingPerk.h
Plugin/src/Scripts/Papyrus/: BakaUtil.h  StringUtil.h
Plugin/src/Scripts/Papyrus/Shared/: RegistrationMap.h
Plugin/src/Serialization/: Serialization.h
Plugin/src/SteamAPI/: SteamAPI.cpp  SteamAPI.h
cmake/: headerlist.cmake  sourcelist.cmake  sourcelist_papyrus.cmake
cmake/ports/autotoml/: portfile.cmake  vcpkg.json
cmake/ports/steamworks-sdk/cmake/: CMakeLists.txt
cmake/triplets/: x64-windows-baka-steam.cmake
ports/autotoml/: vcpkg.json
ports/steamworks-sdk/: portfile.cmake  vcpkg.json
ports/steamworks-sdk/cmake/: CMakeLists.txt  version.cmake.in
ports/tomlplusplus/: portfile.cmake  vcpkg.json
res/: settings.toml
scripts/: archive_artifacts.py  cmake_generate.py  papyrus_cmake.py  papyrus_generate.py
src/: CMakeLists.txt  PCH.cpp  PCH.h  Settings.h  main.cpp
src/Config/: Config.h
src/Events/: EventHandlers.h  Events.h
src/Events/Handlers/: CurrentRadiationSource.h  ItemCrafted.h  PipboyLightEvent.h
src/Forms/: Forms.h
src/Misc/: Patches.h
src/Misc/Patches/: LoadEditorIDs.h
src/Scripts/: ObScript.h  Papyrus.h
src/Scripts/ObScript/: BetaComment.h  FreePlayer.h  GetBaseObject.h  GetDefaultObject.h  Help.cpp  Help.h  QuitGame.h  SpellHasCastingPerk.h
src/Scripts/Papyrus/: BakaUtil.h  StringUtil.h
src/Scripts/Papyrus/Shared/: RegistrationMap.h
src/Serialization/: Serialization.h
src/SteamAPI/: SteamAPI.cpp  SteamAPI.h
src/c++/: CMakeLists.txt  PCH.cpp  PCH.h  Settings.h  main.cpp
src/c++/Events/: EventHandlers.h  Events.h
src/c++/Events/Handlers/: CurrentRadiationSource.h  ItemCrafted.h  PipboyLightEvent.h  TESContainerChanged.h
src/c++/Forms/: Forms.h
src/c++/Misc/: Fixes.h  Patches.h
src/c++/Misc/Fixes/: OnStoryCraftItem.h
src/c++/Misc/Patches/: LoadEditorIDs.h  RandomMods.h
src/c++/Scripts/: ObScript.h  Papyrus.h
src/c++/Scripts/ObScript/: BetaComment.h  FreePlayer.h  GetBaseObject.h  GetDefaultObject.h  Help.h  IsWorkshopPlacementActive.h  QuitGame.h  SpellHasCastingPerk.h
src/c++/Scripts/Papyrus/: Actor.h  BakaUtil.h  ScriptObject.h  StringUtil.h
src/c++/Scripts/Papyrus/Shared/: FunctionArgs.h  RegistrationMap.cpp  RegistrationMap.h
src/c++/Serialization/: Serialization.h
src/c++/SteamAPI/: SteamAPI.cpp  SteamAPI.h
src/c++/Workshop/: Workshop.h
src/papyrus/: ActiveMagicEffect.psc  Actor.psc  BakaUtil.psc  CMakeLists.txt  ReferenceAlias.psc  ScriptObject.psc  StringUtil.psc
